apps/gatus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatus
  template:
    metadata:
      labels:
        app: gatus
    spec:
      containers:
        - name: gatus
          image: twinproduction/gatus:v5.37.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          configMap:
            name: gatus-config
        - name: data
          persistentVolumeClaim:
            claimName: gatus-data
