apps/gatus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: default
spec:
  selector:
    app: gatus
  ports:
    - port: 8080
      targetPort: 8080
