apps/gatus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: status.flipez.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatus
                port:
                  number: 8080
    - host: status.auch.cool
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatus
                port:
                  number: 8080
  tls:
    - hosts:
        - status.flipez.de
        - status.auch.cool
      secretName: gatus-tls
